--- a/packages/components/slider/style/themes/default.variable.less
+++ b/packages/components/slider/style/themes/default.variable.less
@@ -3,7 +3,7 @@
 @slider-rail-background-color: @color-graphite-l30;
 @slider-track-background-color: @color-primary;
 @slider-thumb-background-color: @color-white;
-@slider-dot-background-color: @color-primary;
+@slider-dot-background-color: @color-graphite-l30;
 
 @slider-thumb-border: 2px solid @color-primary;
 
