--- a/packages/components/stepper/style/percent.less
+++ b/packages/components/stepper/style/percent.less
@@ -11,10 +11,6 @@
 
       .@{progress-prefix} {
         position: absolute;
-        top: -5px;
-        right: -5px;
-        bottom: -5px;
-        left: -5px;
       }
     }
   }
